Bug 988414: The drop down menu icon next to the user name is not visible in Chrome on Mac OSX

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -472,6 +472,7 @@ div.user_match {
 
 .arrow_container {
     margin: 0 2px;
+    display: inline-block;
 }
 
 .collapsed {
